Add support for table elements (custom tag name)

--- a/test/dummy/app/views/home/index.html.erb
+++ b/test/dummy/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
           <% sleep 0.3 if Rails.env.development? %>
           UP · <%= 99 + i/10.0 %>%
         <% end %>
-      </uptime>
+      </div>
     </li>
   <% end %>
 </ul>
