Add fix + test + doc for rack 2.2 ETag bug, prepare v1.2

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
   <body>
     <header>render-later</header>
     <%= yield %>
-    <footer>Adrien Jarthon — v<%= RenderLater::VERSION %></footer>
+    <footer>Adrien Rey-Jarthon — v<%= RenderLater::VERSION %></footer>
     <%= render_now %>
   </body>
 </html>
