--- a/test/dummy/app/views/home/index.html.erb
+++ b/test/dummy/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
       <div class="ip">187.23.75.<%= i+1 %></div>
       <div class="uptime">
         <%= render_later "srv-#{i+1}" do %>
-          <% sleep 0.3 if Rails.env.development? %>
+          <% sleep((params[:sleep] || 0.3).to_f) %>
           UP · <%= 99 + i/10.0 %>%
         <% end %>
       </div>
